2004-04-09  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile.am (physmem_LDADD): Add
	../libhurd-cap-server/libhurd-cap-server.a and
	../libhurd-slab/libhurd-slab.a.
	(physmem_SOURCES): Add container.c.
	* container.c: New file.
	* physmem.h: Include <hurd/cap-server.h> and <errno.h>.
	(container_class_init, container_alloc): New prototypes.
	* physmem.c (create_bootstrap_caps): Take new argument bucket.
	Create container capabilities and inject them into the bucket.
	(getpagesize): New temporary helper function.
	(physmem_server): New function.
	(main): New variable BUCKET.  Create capability bucket.  Pass
	BUCKET to create_bootstrap_caps.  New variable MANAGER.  Create
	manager thread.

2004-04-06  Marcus Brinkmann  <marcus@gnu.org>

	* physmem.c (setup_threads): Add threads to pool after creating
	main thread.  Don't overwrite server_thread with an incorrect
	value at the end.

2004-03-19  Marcus Brinkmann  <marcus@gnu.org>

	* physmem.c (WORTEL_MSG_GET_THREADS): New macro.
	(setup_threads): Request number of extra threads from wortel.  Add
	them to the pool.

	* output.h (shutdown): Add noreturn attribute to prototype.
	* output.c (shutdown): Add noreturn attribute.  Sleep forever.

	* config.m4 (HURD_LOAD_ADDRESS): Change load address to 0x400000.
	* physmem.c: Include pthread.h.
	(setup_threads): New function.
	(main): New variable SERVER_THREAD.  Call setup_threads.
	(exit, abort): New functions.
	* physmem.h (switch_thread): Add prototype.
	* ia32-cmain.c (switch_thread): New function.
	(__thread_stack_pointer): New macro.
	(__thread_set_stack_pointer): New macro.
	* Makefile.am (physmem_LDADD): Add ../libpthread/libpthread.a and
	../libhurd-ihash/libhurd-ihash.a.

2004-03-16  Marcus Brinkmann  <marcus@gnu.org>

	* output.c (putchar): Replace all &msg with msg.  Update
	everything to new API.
	* physmem.c: Likewise.

2003-10-26  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile.am (physmem_CPPFLAGS): Use top_builddir for include
	directory.
