@@ -19,6 +19,7 @@
    Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111, USA. */
 
 #include <errno.h>
+#include <stdbool.h>
 
 #include <l4.h>
 #include <hurd/cap-server.h>
@@ -50,5 +51,5 @@ error_t container_class_init ();
 
 /* Allocate a new container object covering the NR_FPAGES fpages
    listed in FPAGES.  The object is locked and has one reference.  */
-error_t container_alloc (l4_word_t nr_fpages, l4_word_t *fpages,
+error_t container_alloc (l4_word_t nr_fpages, l4_word_t *fpages, bool mapped,
 			 hurd_cap_obj_t *r_obj);
